crates/biome_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_yml_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate prettier
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
useTabs: true
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Could not deserialize the Prettier configuration file.
    Only JSON configurations are supported.
  


```
